# kapow

./: .gitignore  .goreleaser.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  GPG-notes.org  LICENSE  Makefile  Pipfile  README.md  README.rst  RELEASE-v0.3.0.md  addrevoker  addrevokerexpect  addrevokerexpectbraces  foo  go.mod  go.sum  kapow.py  main.go  master.pow  proposal.md  release-key.gpg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
client/: route_add.go  route_add_test.go  set_test.go
command/: get.go  route.go  server.go  set.go  validations.go
doc/: README.md  echo-stream.pow  echo.pow  greet-json.pow  greet-json.rst  greet.pow  log-and-stuff-callback.pow  log-and-stuff.pow  reading_headers.rst  readme.rst  redirecting_a_url-BROKEN.rst  redirecting_a_url.rst  upload.rst  working_with_forms.rst  writing_headers.rst
docker/: Dockerfile
docs/: Pipfile  README.md
examples/: eval.kapow  nmap-streaming.pow  operator.pow  pandoc.pow  torrent.pow
gopoc/: .gitignore  Makefile  kapow.go
http/: reason.go  reason_test.go  request.go  request_test.go
kapow2/: Pipfile  kapow
poc/: .pylintrc  Dockerfile  Makefile  Pipfile  README.rst  buildme  kapow  setup.cfg
poc/examples/: eval.pow  eval.testme  helloworld.pow  nmap-callback.pow  nmap-streaming.pow  nmap-web.html  nmap-web.pow  nmap.html  nmap.pow  operator.pow  topdf  torrent.pow  wsecho.pow
poc/examples/nmap/: Dockerfile  nmap.pow
poc/examples/pandoc/: pandoc.pow  testme
poc/examples/pdfeditor/: pdfeditor.pow  topdf
poc/examples/tcpdump/: README.md  tcpdump.pow
spec/: README.md
(+238 files in other folders)
