[metadata]
name = kapow
version = 0.0.1
description = HTTP microframework for POSIX Shells
keywords = shell, posix, http, microservice, api
license = Apache 2.0

[options]
zip_safe = True
include_package_data = True
scripts =
  bin/kapow
  bin/request
  bin/response
  bin/static
install_requires =
  aiohttp==3.5.4
  requests==2.22.0
  click==7.0

[pycodestyle]
max-line-length = 100

